# Mazes

./: .gitignore  CLAUDE.md  README.md  big_grid.py  new_maze_algorithm.py  pyproject.toml  setup.py
Demo/: AldousBroderDemo.py  RecBacDemo.py
demos/: aldous_broder_demo.py  ascii_mask_demo.py  binary_tree_demo.py  circle_demo.py  color_demo.py  deadends_demo.py  dijkstra_demo.py  hk_demo.py  longest_path_demo.py  mask_demo.py  recursive_demo.py  sidewinder_demo.py  test_demo.py  weighted_demo.py  wilson_demo.py
maze_algorithms/: aldous_broder.py  binary_tree.py  hunt_and_kill.py  maze_algorithm.py  recursive_backtrack.py  sidewinder.py  wilson.py
maze_structures/: cell.py  color_grid.py  color_mask.py  color_polar.py  distance_grid.py  distances.py  grid.py  image_mask.py  mask.py  masked_grid.py  polar_cell.py  polar_grid.py  weighted_cell.py  weighted_grid.py
src/algorithms/: aldous_broder.py  binary_tree.py  sidewinder.py
src/demos/: aldous_broder_demo.py  ascii_mask_demo.py  binary_tree_demo.py  circle_demo.py  color_demo.py  deadends_demo.py  dijkstra_demo.py  hk_demo.py  longest_path_demo.py  mask_demo.py  recursive_demo.py  sidewinder_demo.py  weighted_demo.py  wilson_demo.py
src/foundations/: cell.py  color_grid.py  grid.py  masked_grid.py  polar_cell.py  polar_grid.py  weighted_cell.py  weighted_grid.py
src/mazes/algorithms/: aldous_broder.py  binary_tree.py  hunt_and_kill.py  recursive_backtrack.py  sidewinder.py  wilson.py
src/mazes/structures/: cell.py  color_grid.py  color_mask.py  color_polar.py  distance_grid.py  grid.py  (+6 more)
ui/: app.py
